# UFSC_Testabilidade

./: README.md
Identification/: CMakeLists.txt  Identification.c  Identification.h  identification_unittest.cc  main  main.c  makefile  test.sh
Identification/.devcontainer/: Dockerfile  devcontainer.json
ModelChecking/TinyOS/TAPAAL/: README.md  TinyOS.tapn
ModelChecking/TinyOS/UPPAAL/: README.md
ModelChecking/WeatherStation/: README.md  Weather_orig.xml
State_Machine/: FSM_Dimmer.c  main  makefile
Test/Identification/: .directory  .gitlab-ci.yml  CodeCoverage.cmake  build.sh  identification.cc  main.cpp
Test/Identification/.devcontainer/: .directory
Test/State_Machine/: FSM_Dimmer.h  main  main.c
TinyOS/: README.md  TinyOS.xml
TinyOS/TAPAAL/: README.md  TinyOS.tapn
